--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         .renhanh {
             font-family: Consolas;
         }
+
+        .imager {
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <p>
@@ -65,7 +70,7 @@
 noi gương</span> bạn Thủy nhé!
     </div>
 </div>
-<div>img</div>
+<div class="imager"><img src="img/img2.png"></div>
 <div id="thanbai">
     <div class="noidung">Về phần bài tập lab1, các bạn đã được làm các tài liệu html hết sức cơ bản, sử dụng thẻ link và
         một số thẻ html cơ bản, làm quen với các thẻ meta, biết cách hiển thị các ký tự đặc biệt trong html, cũng như
