--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Tahoma;
         }
 
-        #thanbai {
+        #than_bai {
             font-size: 25px;
             font-family: Tahoma;
         }
@@ -32,11 +32,11 @@
             font-style: italic;
         }
 
-        .red {
+        .do {
             color: red;
         }
 
-        .blue {
+        .xanh {
             color: #50963c;
         }
 
@@ -63,29 +63,29 @@
         <span class="indam">Nguyễn Thu Thủy</span> (tức <span class="indam">Thủy Elmo</span>) đã rất vui vẻ xung công
         10k đầu tiên cho lớp, bạn còn thắc mắc với Quốc Anh rằng:
         <span class="innghieng">"đóng cả tháng thì là bao nhiêu tiền?"</span>và tuyên bố <span class="innghieng">"sẽ cố gắng cho lớp ăn tiêu thoải mái!".</span>
-        thể nói rằng, lớp chúng ta<span class="red innghieng"> rất cần </span>những người như bạn Thuỷ, bạn đã góp phần
+        thể nói rằng, lớp chúng ta<span class="do innghieng"> rất cần </span>những người như bạn Thuỷ, bạn đã góp phần
         không nhỏ để
-        tạo ra một môi trường <span class="blue innghieng gachchan">xanh, sạch, đẹp, và lười làm bài tập.</span> Cả lớp
-        cùng tặng <span class="indam red">like</span> và <span class="indam red">cố gắng
+        tạo ra một môi trường <span class="xanh innghieng gachchan">xanh, sạch, đẹp, và lười làm bài tập.</span> Cả lớp
+        cùng tặng <span class="indam do">like</span> và <span class="indam do">cố gắng
 noi gương</span> bạn Thủy nhé!
     </div>
 </div>
 <div class="imager"><img src="img/img2.png"></div>
-<div id="thanbai">
+<div id="than_bai">
     <div class="noidung">Về phần bài tập lab1, các bạn đã được làm các tài liệu html hết sức cơ bản, sử dụng thẻ link và
         một số thẻ html cơ bản, làm quen với các thẻ meta, biết cách hiển thị các ký tự đặc biệt trong html, cũng như
         thêm ảnh vào page của mình. Nội dung được tóm lược như bên dưới.
         <ul class="renhanh">
             <li>Write simple HTML documents.</li>
             <li>Use Hyperlinks.</li>
-            <li>Use <span class="innghieng red"> &lt;meta&gt; </span>tag.</li>
+            <li>Use <span class="innghieng do"> &lt;meta&gt; </span>tag.</li>
             <li>Use special characters in HTML.</li>
             <li>Use Basic Tags.</li>
             <li>Insert Images.</li>
         </ul>
-        Bên cạnh đó các bạn cũng được hướng dẫn sử dụng <span class="blue gachchan">github</span> và setup môi trường để
+        Bên cạnh đó các bạn cũng được hướng dẫn sử dụng <span class="xanh gachchan">github</span> và setup môi trường để
         có thể đưa
-        sản phẩm lên <span class="gachchan blue">Google App Engine</span> Nên nhớ, những thông tin về git các bạn được
+        sản phẩm lên <span class="gachchan xanh">Google App Engine</span> Nên nhớ, những thông tin về git các bạn được
         học trong thứ
         bảy vừa rồi là hết sức cơ bản, chúng ta sẽ còn nói tiếp về chủ đề này trong các buổi sau.
     </div>
@@ -95,38 +95,38 @@ noi gương</span> bạn Thủy nhé!
         <ul class="renhanh">
             <li>
                 <ul>Tìm hiểu các thẻ sau
-                    <li><span class="red innghieng">&lt;ul&gt;,&lt;li&gt;</span> để hiện thị danh sách</li>
-                    <li><span class="innghieng red">&lt;a&gt;</span> và cách đặt link gửi mail bằng thẻ <span
-                            class="innghieng red">&lt;a&gt;</span></li>
-                    <li>Các thẻ <span class="red innghieng">&lt;strong&gt;, &lt;em&gt;, &lt;b&gt;, &lt;i&gt;, &lt;p&gt;, &lt;h1&gt;, &lt;pre&gt;.</span>
+                    <li><span class="do innghieng">&lt;ul&gt;,&lt;li&gt;</span> để hiện thị danh sách</li>
+                    <li><span class="innghieng do">&lt;a&gt;</span> và cách đặt link gửi mail bằng thẻ <span
+                            class="innghieng do">&lt;a&gt;</span></li>
+                    <li>Các thẻ <span class="do innghieng">&lt;strong&gt;, &lt;em&gt;, &lt;b&gt;, &lt;i&gt;, &lt;p&gt;, &lt;h1&gt;, &lt;pre&gt;.</span>
                     </li>
-                    <li>Trường hợp thẻ <span class="innghieng red">&lt;h1&gt;</span>, text bên trong luôn được chuyển
+                    <li>Trường hợp thẻ <span class="innghieng do">&lt;h1&gt;</span>, text bên trong luôn được chuyển
                         thành chữ
-                        hoa với thuộc tính <span class="innghieng red">text-transform.</span>.
+                        hoa với thuộc tính <span class="innghieng do">text-transform.</span>.
                     </li>
                 </ul>
             </li>
             <li>
-                Tạo thư mục <span class="red innghieng">day2</span> trong project html sẵn có, tạo file html với tên là
-                <span class="innghieng red">my-lab2.html</span>
+                Tạo thư mục <span class="do innghieng">day2</span> trong project html sẵn có, tạo file html với tên là
+                <span class="innghieng do">my-lab2.html</span>
             </li>
-            <li>File <span class="innghieng red">my-lab2.html</span> hiển thị đúng nội dung trong tài liệu các bạn đang
+            <li>File <span class="innghieng do">my-lab2.html</span> hiển thị đúng nội dung trong tài liệu các bạn đang
                 đọc
                 (từ trên xuống dưới).
             </li>
-            <li>Font chữ mặc định: <span class="innghieng red">Tahoma</span>, cỡ chữ <span
-                    class="innghieng red">11px</span></li>
-            <li>Text trong thẻ <span class="innghieng red">&lt;ul&gt;, &lt;li&gt;</span> dùng font chữ <span
-                    class="red innghieng">consolas</span></li>
+            <li>Font chữ mặc định: <span class="innghieng do">Tahoma</span>, cỡ chữ <span
+                    class="innghieng do">11px</span></li>
+            <li>Text trong thẻ <span class="innghieng do">&lt;ul&gt;, &lt;li&gt;</span> dùng font chữ <span
+                    class="do innghieng">consolas</span></li>
             <li>Các link khi click vào sẽ đưa người dùng sang một tab mới và không
                 đóng tab cũ.
             </li>
             <li>Các text là code có màu đỏ, chữ in nghiêng.</li>
             <li>Đưa bài tập lên github và Google App Engine trước ngày thứ 5.</li>
-            <li><span class="innghieng red">Style được đưa ra file css riêng.</span></li>
+            <li><span class="innghieng do">Style được đưa ra file css riêng.</span></li>
         </ul>
         Nếu có bất kì thắc mắc, vui lòng gửi mail để nhận support <span
-            class="blue gachchan">tại đây</span>. (Link này sẽ thực hiện gửi mail)
+            class="xanh gachchan">tại đây</span>. (Link này sẽ thực hiện gửi mail)
     </div>
 </div>
 </body>
